@@ -6,6 +6,7 @@
 * Support giving users a non-nickname alias.
 * Add a report to help identify important unassigned nicknames.
 * Include nick count in the generated HTML statistics.
+* Support separating users by nick!user@host rather than only by nick.
 
 0.0.1 (2012-12-21)
 ==================
